# Video-Decoder

./: .cproject  .gitignore  .gitignore.swp  .project  CMakeLists.txt  README.md  cmake_install.cmake
Debug/: makefile  sources.mk
Debug/src/: VideoDecoderJni.d  VpeVideoDecoder.d  subdir.mk  video_decoder_jni.d  vpe_decoder.d
Debug/test/: subdir.mk
DebugTest/src/: subdir.mk
DebugTest/test/: subdir.mk
Decoder/Release/src/: VideoDecoderJni.d  decoderjni.d
Decoder/inc/: decoder.h
Decoder/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libswresample.pc  libswscale.pc
Decoder/src/: decoderjni.cpp
Release/: makefile  objects.mk
Release/src/: VpeVideoDecoder.d  subdir.mk
Release/test/: subdir.mk
ReleaseTest/: makefile  objects.mk
ReleaseTest/src/: subdir.mk  video_decoder_jni.d
ReleaseTest/test/: subdir.mk  video_decoder_test.d
Video-Decoder/inc/: read_conf.h
Video-Decoder/inc/libavformat/: avformat.h
Video-Decoder/src/: VideoDecoderJni.cpp  read_conf.cpp
inc/: VideoDecoder.h  avio_context_manager.h  avio_mem_context.h  com_vpe_transfer_Download.h  org_cripac_isee_vpe_util_Decoder.h  video_decoder.hpp  vpe_avio_mem_context.h  vpe_decoder.h
inc/libavutil/: common.h  pixfmt.h
include/: avio_context_manager.h  org_casia_cripac_isee_vpe_util_VideoDecoder.h  org_cripac_isee_vpe_util_VideoDecoder.h  video_decoder.hpp
jni/: CMakeLists.txt  Makefile  cmake_install.cmake  video_decoder_jni.cpp
lib/: libavformat.so.55.19.104  libavutil.so.52.48.101  libswscale.so.2.5.101
lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
src/: .decoderjni.cpp.swo  VideoDecoderJni.cpp  VpeVideoDecoder.cpp  decoderjni.cpp  testmain.cpp  video_decoder_jni.cpp  vpe_decoder.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  video_decoder_test.cpp
unittest/: 1.h264  main.cpp  makefile  save_frames.cpp
unittest/bak/: makefile
unittest/include/: save_frames.h
unittest/include/jpeg/: jconfig.h  jpeglib.h
